objects/Reporting_Lead_Channel_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will use as a reference to populate Reporting Lead Channel field on Warm Lead records. Created for CR-20150908-9227.</description>
    <fields>
        <fullName>Lead_Event__c</fullName>
        <description>Created for CR-20150908-9227.</description>
        <label>Lead Event</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Origin__c</fullName>
        <description>Created for CR-20150908-9227.</description>
        <label>Lead Origin</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Lead_Channel_Value__c</fullName>
        <description>Created for CR-20150908-9227.</description>
        <label>Reporting Lead Channel Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Reporting Lead Channel Setting</label>
</CustomObject>